--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <ul id="todo-selector">
       
     </ul>
+    <form action="/submit" method="post" id="form">
+      <input type="text" name="todo" id="input_todo" />
+      <button type="submit">Submit</button>
+    </form>
     
   </main>
 
